applications/hk-dailybuild-ingress/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: dailybuild
  name: dailybuild
